<resources>
    <string name="app_name">Inventory Audit App</string>

    //Commonly Used
    <string name="searchButton">Search</string>
    <string name="resetButton">Reset</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>

    //Home Page
    <string name="homePageTitle">Inventory Audit App</string>
    <string name="inventoryButton">Inventory</string>
    <string name="auditButton">Audit</string>
    <string name="aboutButton">About</string>
    <string name="signInButton">Sign In</string>

    //Inventory and Audit Search Page
    <string name="inventorySearchPageTitle">Search in Inventory</string>
    <string name="auditSearchPageTitle">Audit from Inventory</string>
    <string name="itemTextField">Item</string>
    <string name="buildingTextField">Building</string>
    <string name="roomTextField">Room</string>

    //About Page
    <string name="aboutPageTitle">About</string>
    <string name="aboutPageInfo">This app was made as a senior project for Dr. Stonedahls CSC490 class at Augustana College in Rock Island Illinois</string>
    <string name="kevinName">Kevin Phoenix</string>
    <string name="kevinInfo">Kevin is a senior at Augustana College Majoring in Computer Science. When he is not coding he enjoys playing guitar and riding tractors.</string>
    <string name="dylanName">Dylan Hart</string>
    <string name="dylanInfo">Dylan is a senior at Augustana College Majoring in Computer Science. When he is not coding he enjoys playing baseball and playing rocket league.</string>
    <string name="maxName">Max McComb</string>
    <string name="maxInfo">Max is a senior at Augustana College Majoring in Computer Science. When he is not coding Max enjoys playing Basketball, and listening to Kevin play guitar.</string>
    <string name="scottName">Scott Daluga</string>
    <string name="scottInfo">Scott is a senior at Augustana College majoring in Computer Science and minoring in Math. He enjoys playing tennis and hanging out with his four siblings in his free time.</string>

    //Inventory Search Results Page
    <string name="inventorySearchResultsTitle">Results</string>
    <string name="addItem">Add Item</string>
    <string name="modifyItem">Modify Item</string>

    //Inventory Search Results Page
    <string name="auditSearchResultsTitle">Results</string>

    //TextField Labels for Add and Modify Item Page
    <string name="itemID">Serial Num</string>
    <string name="building">Building</string>
    <string name="room">Room</string>
    <string name="OS">OS</string>
    <string name="brand">Brand</string>
    <string name="lastScanned">Last Modified</string>
    <string name="dateAdded">Date Added</string>
    <string name="modifiedBy">Modified By</string>
    <array name="itemTypes">
        <item>Computer</item>
        <item>Printer</item>
    </array>

    //Add Items Page
    <string name="item">Item</string>
    <string name="type">Type</string>
    <string name="serialNumber">Serial Number</string>
    <string name="printerType">Printer Type</string>
    <array name="printerTypes">
        <item>Laser</item>
        <item>Ink</item>
    </array>

    //Array for add item / modify page
    <string-array name="brands">
        <item>Dell</item>
        <item>Apple</item>
        <item>HP</item>
        <item>Asus</item>
        <item>Acer</item>
        <item>Lenovo</item>
        <item>Sony</item>
        <item>Alienware</item>
        <item>Samsung</item>
        <item>Toshiba</item>
        <item>Microsoft</item>
        <item>LG</item>
        <item>Google</item>
        <item>Huawei</item>
        <item>Maingear</item>
        <item>Origin</item>
        <item>Digital Storm</item>
        <item>EVGA</item>
        <item>Falcon Northwest</item>
        <item>Sager</item>
        <item>Purism - Librem</item>
        <item>Razer</item>
        <item>Vizio</item>
        <item>Sharp</item>
    </string-array>

    //Array for add item / modify page
    <string-array name="operating_systems">
        <item>MS-DOS</item>
        <item>Windows 1.0</item>
        <item>Windows 2.0</item>
        <item>Windows 3.0</item>
        <item>Windows 95</item>
        <item>Windows 98</item>
        <item>Windows ME</item>
        <item>Windows 2000</item>
        <item>Windows XP</item>
        <item>Windows Vista</item>
        <item>Windows 7</item>
        <item>Windows 8</item>
        <item>Windows 10</item>
        <item>Solaris</item>
        <item>Unix</item>
        <item>Linux</item>
        <item>MacOS</item>
        <item>Android</item>
        <item>iOS</item>
        <item>Ubuntu</item>
        <item>ChromeOS</item>
        <item>CentOS</item>
        <item>z/OS</item>
    </string-array>

</resources>
