<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventorySearchPage">

    <Spinner
        android:id="@+id/roomSpinner"
        android:layout_width="228dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/roomTextField"
        app:layout_constraintTop_toTopOf="@+id/roomTextField"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/buildingSpinner"
        android:layout_width="228dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buildingTextField"
        app:layout_constraintTop_toTopOf="@+id/buildingTextField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/roomTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomTextField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buildingTextField"
        app:layout_constraintTop_toBottomOf="@+id/buildingTextField"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/buildingTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildingTextField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/itemTextField"
        app:layout_constraintTop_toBottomOf="@+id/itemTextField"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/inventorySearchPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventorySearchPageTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/itemTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemTextField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Spinner
        android:id="@+id/itemSpinner"
        android:layout_width="228dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/itemTextField"
        app:layout_constraintTop_toTopOf="@+id/itemTextField"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomTextField"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintVertical_bias="0.182" />
</androidx.constraintlayout.widget.ConstraintLayout>